Added layout and fixed blog posts, now I have to fix syntax highlighter

--- a/blog/_posts/2013-12-04-Prova.md
+++ b/blog/_posts/2013-12-04-Prova.md
@@ -1,3 +1,8 @@
+---
+layout: post
+title: "Questa è una super prova provosa"
+tags: prova provissima
+---
 Questa è una semplice prova ma allo stesso tempo non è una prova vissima super congegnata per fungere like a boss
 
 Tanto provare non costa assolutamente nulla, no ?
