--- a/_posts/2013-10-05-csinfopa.md
+++ b/_posts/2013-10-05-csinfopa.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: CsInfoPa
+description: Il sacro graal dell corso di scienze informatiche.
 ---
 Qualsiasi studente, almeno una volta nella vita ha chiesto ai propri colleghi appunti, esercizi, compiti e chi ne ha più ne metta, stressante trovare del buon materiale, non credete?   
 Così, mi è venuto in mente di aprire qualcosa che favorisca lo scambio di tali informazioni, reperibili a chiunque voglia e implementabili da chiunque possa.
