--- a/_posts/2013-08-31-picchio.md
+++ b/_posts/2013-08-31-picchio.md
@@ -1,6 +1,7 @@
 ---
 title: Picchio
 layout: post
+description: Uppare non è mai stato così semplice
 ---
 Chi non ha mai avuto il bisogno di caricare il più velocemente possibile un file online così da poterlo condividere ?   
 La comodità di specificare un comando e dopo poco ricevere il link del file da poter condividere con chiunque io voglia è davvero inimmaginabile, non credete?   
