--- a/_posts/2014-03-09-reborn.md
+++ b/_posts/2014-03-09-reborn.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Reborn
+description: Rinascita, tutti i cambiamenti.
 ---
 Anche questa sessione d'esami e passata e rieccomi qui, grandi cambiamenti sono avvenuti, come potete notare.   
 Cosa ci sarà sotto il cofano questa volta ?
