--- a/_posts/2013-10-05-csinfopa.md
+++ b/_posts/2013-10-05-csinfopa.md
@@ -11,10 +11,16 @@ Il progetto in questione non è altro che un repository hostato su Github conten
 **Forkate, modificate il repo e inviatemi la modifica** che se avrà rispettato "lo standard" verrà inserita.   
 Così oltre a dare una mano a questo utile -a mio dire- progetto potrete trovare materiale sempre nuovo e diverso, costantemente aggiornato da **voi** per **voi**.
 
-Il tutto reperibile a questo indirizzo: [CsInfoPa](http://dlion.github.io/CsInfoPa/)
-
 In effetti un giorno sarebbe interessante trovare in giro repo di varie facoltà gestite in questo modo con l'unico scopo di rendere la conoscenza libera e alla portata di chiunque voglia senza difficoltà.
 
 Be' che dire, spero di aver fatto qualcosa di buono non solo per me ma per chiunque ne avesse bisogno.
+
+## **EDIT**
+
+Dopo alcune riflessioni ho pensato di splittare l'enorme repo che si era creato in tanti piccoli repo -uno per ogni materia- più facili da gestire, da clonare e da modificare. Il tutto gestito 'sta volta dall'organizzazione "CsUnipa" appositamente creata.
+
+Il repo è stato quindi rimosso, diviso e ricaricato a questo indirizzo: [https://github.com/orgs/CsUnipa/](https://github.com/orgs/CsUnipa/)
+
+Ho fatto ciò anche perché in questo modo il repo non sarà collegato solo al mio account rendendo quasi monopolistico il suo mantenimento ma sarà affidato all'associazione creata così da non avere "padroni" e di poter crescere negli anni anche senza il mio aiuto così da avere uno strumento funzionalmente efficiente.
 
 Saluti, DLion.
