--- a/_posts/2014-03-09-reborn.md
+++ b/_posts/2014-03-09-reborn.md
@@ -1,6 +1,6 @@
 ---
 title: Reborn
-description: Rinascita, tutti i cambiamenti.
+description: Rinascita, tutti i cambiamenti da ieri a oggi
 category: Personal
 ---
 Anche questa sessione d'esami e passata e rieccomi qui, grandi cambiamenti sono avvenuti, come potete notare.   
@@ -13,7 +13,7 @@ Ho deciso dopo diversi ragionamenti che le 40€ annuali che spendevo per l'host
 * Layout interamente realizzato da me ma ancora ci sono molti ritocchi e con il tempo lo andrò sistemando (a partire dal responsive)
 * Trasferito dominio ad una compagnia migliore.
 
-Vediamo queste scelte nel dettaglio.
+Vediamo queste scelte nel dettaglio:
 
 ## Da Wordpress a Jekyll
 
