--- a/_posts/2014-03-09-reborn.md
+++ b/_posts/2014-03-09-reborn.md
@@ -2,6 +2,7 @@
 title: Reborn
 description: Rinascita, tutti i cambiamenti da ieri a oggi
 category: Personal
+layout: post
 ---
 Anche questa sessione d'esami e passata e rieccomi qui, grandi cambiamenti sono avvenuti, come potete notare.   
 Cosa ci sarà sotto il cofano questa volta ?
