--- a/_posts/2015-07-14-gogolang.md
+++ b/_posts/2015-07-14-gogolang.md
@@ -33,7 +33,7 @@ La trovate qui: [https://github.com/dlion/WhereIsMyPi](https://github.com/dlion/
 ## Verso l'infinito...
 
 Lo so, sono utility piuttosto inutili, ho esigenze che potrei soddisfare con altri struenti fatti meglio, etc. ma così non potrei usare il Go... quindi prendete il tutto come piccoli esperimenti per maneggiare meglio tale linguaggio.   
-Con il tempo sfornerò altra roba inutile sperando che esercitandomi acquisisca una maggiore praticità nell'uso di questo linguaggio che ogni giorno di più mi attira a se.
+Con il tempo sfornerò altra roba inutile sperando che esercitandomi acquisisca una maggiore praticità nell'uso di questo linguaggio che ogni giorno di più mi attira a sè.
 
 Ovviamente se avete suggerimenti in merito sono tutto orecchi, sono qui anche per imparare.
 
