--- a/_posts/2013-08-31-picchio.md
+++ b/_posts/2013-08-31-picchio.md
@@ -93,4 +93,4 @@ Le rimanenti opzioni sono puramente "visive", permettono di:
 Fatemi sapere che ne pensate, cosa posso aggiungere, cosa va rimosso o migliorato, qualsiasi consiglio è ben accetto!   
 Nella prossima versione penso proprio di inserire una progressbar così -nel caso di file molto grandi- sarà possibile tenere d'occhio la percentuale caricata.
 
-Saluti, DLion.
+Saluti, DLion
