--- a/_posts/2013-10-05-csinfopa.md
+++ b/_posts/2013-10-05-csinfopa.md
@@ -1,7 +1,7 @@
 ---
 title: CsInfoPa
-description: Il sacro graal dell corso di scienze informatiche.
-category: Personal
+summary: Il sacro graal dell corso di scienze informatiche.
+categories: Personal
 layout: post
 ---
 Qualsiasi studente, almeno una volta nella vita ha chiesto ai propri colleghi appunti, esercizi, compiti e chi ne ha più ne metta, stressante trovare del buon materiale, non credete?   
