--- a/_posts/2014-03-09-reborn.md
+++ b/_posts/2014-03-09-reborn.md
@@ -1,7 +1,7 @@
 ---
 title: Reborn
-description: Rinascita, tutti i cambiamenti da ieri a oggi
-category: Personal
+summary: Rinascita, tutti i cambiamenti da ieri a oggi
+categories: Personal
 layout: post
 ---
 Anche questa sessione d'esami e passata e rieccomi qui, grandi cambiamenti sono avvenuti, come potete notare.   
