--- a/_posts/2014-09-29-bugmenot.md
+++ b/_posts/2014-09-29-bugmenot.md
@@ -1,7 +1,7 @@
 ---
 title: BugMeNot
-description: Modulo in node per usare BugMeNot dalla shell
-category: Programming
+summary: Modulo in node per usare BugMeNot dalla shell
+categories: Programming
 layout: post
 ---
 Quante volte vi è capitato di finire su un sito che richiedeva un account per poter utilizzare le funzionalità che metteva a disposizione?   
