--- a/_posts/2016-08-29-go-odbye.md
+++ b/_posts/2016-08-29-go-odbye.md
@@ -1,7 +1,7 @@
 ---
 title: Go-odbye
-description: Bye Bye Unfollowers!
-category: programming
+summary: Bye Bye Unfollowers!
+categories: programming
 layout: post
 ---
 Una delle cose peggiori che possono capitare ad un utente di twitter è sicuramente quella di essere defollowati ma come scoprire chi ti defollowa ? Per risolvere tale problema anziché rivolgermi ad uno dei tanti servizi online ho pensato bene di crearmene uno ad-hoc per le mie esigenze, totalmente offline e da linea di comando.
