--- a/_posts/2013-08-31-picchio.md
+++ b/_posts/2013-08-31-picchio.md
@@ -1,7 +1,7 @@
 ---
 title: Picchio
-description: Uppare non è mai stato così semplice
-category: Programming
+summary: Uppare non è mai stato così semplice
+categories: Programming
 layout: post
 ---
 Chi non ha mai avuto il bisogno di caricare il più velocemente possibile un file online così da poterlo condividere ?   
