--- a/_posts/2015-07-14-gogolang.md
+++ b/_posts/2015-07-14-gogolang.md
@@ -1,7 +1,7 @@
 ---
 title: Go Golang!
-description: Golang has you
-category: Programming
+summary: Golang has you
+categories: Programming
 layout: post
 ---
 
