--- a/_posts/2017-07-10-XPeppers.md
+++ b/_posts/2017-07-10-XPeppers.md
@@ -12,4 +12,6 @@ oggi entro ufficialmente in una nuova famiglia, quella di [XPeppers](https://www
 Azienda di sviluppo con focus su Agile, DevOps e Cloud; formata da persone in gamba, spero di imparare molto da loro e di poter restituire
 altrettanto.
 
+![Xpeppers](/images/xpeppers.png)
+
 Let's start!
