Fixed url and typo

--- a/_posts/2018-02-05-til-sip.md
+++ b/_posts/2018-02-05-til-sip.md
@@ -67,7 +67,7 @@ type TrimReader interface {
 }
 ```
 
-Grosse interfacce portano inesorabilmente ad un accoppiamento involontario fra classi e ciò dovrebbe essere evitato, quando si disegna un interfaccia è sempre meglio chiedersi "*ho bisogno davvero di tutti i metodi contenuti in essa? Se no, come posso rendere l'interfaccia più piccola?*"
+Grosse interfacce portano inesorabilmente ad un accoppiamento involontario fra classi e ciò dovrebbe essere evitato, quando si disegna una interfaccia è sempre meglio chiedersi "*ho bisogno davvero di tutti i metodi contenuti in essa? Se no, come posso rendere l'interfaccia più piccola?*"
 
 Questo principio va a braccetto con il Principio di Singola Responsabilità la quale ci permette di avere un codice chiaro ma questo principio merita di esser discusso in un articolo a sé.
 
