Dependency Inversion Principle

--- a/_posts/2018-02-05-til-isp.md
+++ b/_posts/2018-02-05-til-isp.md
@@ -15,7 +15,7 @@ L'ISP fa parte di una serie di principi che insieme formano il **SOLID**:
 * **O** -> OCP (Open Closed Principle)
 * **L** -> [LSP](https://dlion.it/til-lsp/) (Liskov substitution Principle)
 * **I** -> ISP (Interface Segregation Principle)
-* **D** -> DIP (Dependency Inversion Principle)
+* **D** -> [DIP](https://dlion.it/til-dip) (Dependency Inversion Principle)
 
 > I *clients* non dovrebbero esser forzati a dipendere da metodi che non usano
 
