--- a/_posts/2018-02-08-til-srp.md
+++ b/_posts/2018-02-08-til-srp.md
@@ -15,7 +15,7 @@ L'SRP fa parte di una serie di principi che insieme formano il **S.O.L.I.D.**:
 * **O** -> OCP (Open Closed Principle)
 * **L** -> [LSP](https://dlion.it/til-lsp) (Liskov substitution Principle)
 * **I** -> [ISP](https://dlion.it/til-isp/) (Interface Segregation Principle)
-* **D** -> DIP (Dependency Inversion Principle)
+* **D** -> [DIP](https://dlion.it/til-dip) (Dependency Inversion Principle)
 
 > Ogni modulo o classe dovrebbe avere la responsabilità su una singola parte della funzionalità fornita dal software e quella funzionalità dovrebbe essere interamente incapsulata nella classe.
 
