--- a/_posts/2018-02-05-til-isp.md
+++ b/_posts/2018-02-05-til-isp.md
@@ -12,7 +12,7 @@ L'articolo in questione è di [Fanis Despoudis](https://codeburst.io/understandi
 L'ISP fa parte di una serie di principi che insieme formano il **SOLID**:
 
 * **S** -> [SRP](https://dlion.it/til-srp/) (Single Responsability Principle)
-* **O** -> OCP (Open Closed Principle)
+* **O** -> [OCP](https://dlion.it/til-ocp/) (Open Closed Principle)
 * **L** -> [LSP](https://dlion.it/til-lsp/) (Liskov substitution Principle)
 * **I** -> ISP (Interface Segregation Principle)
 * **D** -> [DIP](https://dlion.it/til-dip) (Dependency Inversion Principle)
