--- a/_posts/2018-02-08-til-srp.md
+++ b/_posts/2018-02-08-til-srp.md
@@ -12,7 +12,7 @@ L'articolo in questione è di [Fenis Despoudis](https://codeburst.io/understandi
 L'SRP fa parte di una serie di principi che insieme formano il **S.O.L.I.D.**:
 
 * **S** -> SRP (Single Responsability Principle)
-* **O** -> OCP (Open Closed Principle)
+* **O** -> [OCP](https://dlion.it/til-ocp/) (Open Closed Principle)
 * **L** -> [LSP](https://dlion.it/til-lsp) (Liskov substitution Principle)
 * **I** -> [ISP](https://dlion.it/til-isp/) (Interface Segregation Principle)
 * **D** -> [DIP](https://dlion.it/til-dip) (Dependency Inversion Principle)
