--- a/_posts/2018-03-03-til-dip.md
+++ b/_posts/2018-03-03-til-dip.md
@@ -11,7 +11,7 @@ Oggi ho letto un [paper](https://drive.google.com/file/d/0BwhCYaYDn8EgMjdlMWIzNG
 DIP fa parte di una serie di principi che insieme formano il **S.O.L.I.D.**:
 
 * **S** -> [SRP](https://dlion.it/til-srp/) (Single Responsability Principle)
-* **O** -> OCP (Open Closed Principle)
+* **O** -> [OCP](https://dlion.it/til-ocp/) (Open Closed Principle)
 * **L** -> [LSP](https://dlion.it/til-lsp/) (Liskov substitution Principle)
 * **I** -> [ISP](https://dlion.it/til-isp/) (Interface Segregation Principle)
 * **D** -> DIP (Dependency Inversion Principle)
