--- a/_posts/2018-02-24-til-lsp.md
+++ b/_posts/2018-02-24-til-lsp.md
@@ -11,7 +11,7 @@ Oggi ho letto un [paper](https://drive.google.com/file/d/0BwhCYaYDn8EgNzAzZjA5Zm
 LSP fa parte di una serie di principi che insieme formano il **S.O.L.I.D.**:
 
 * **S** -> [SRP](https://dlion.it/til-srp/) (Single Responsability Principle)
-* **O** -> OCP (Open Closed Principle)
+* **O** -> [OCP](https://dlion.it/til-ocp/) (Open Closed Principle)
 * **L** -> LSP (Liskov substitution Principle)
 * **I** -> [ISP](https://dlion.it/til-isp/) (Interface Segregation Principle)
 * **D** -> [DIP](https://dlion.it/til-dip/) (Dependency Inversion Principle)
