--- a/_posts/2018-03-17-til-ocp.md
+++ b/_posts/2018-03-17-til-ocp.md
@@ -65,7 +65,7 @@ Il nostro cliente ci chiede di creare un'applicazione che ci permetta di calcola
 ```java
 public class AreaCalculator {
 
-    public double processArea(Rectangle[] rectangles) {
+    public double getTotalAreaFromRectangles(Rectangle[] rectangles) {
         double totalArea = 0;
         for (Rectangle rectangle : rectangles) {
             totalArea += rectangle.getHeight() * rectangle.getWidth();
@@ -77,7 +77,7 @@ public class AreaCalculator {
 
 Perfetto, il nostro compito è fini- ah, il cliente però ha appena riferito di aver esteso il proprio core-business sui cerchi e vorrebbe che l'applicazione in questione riesca a calcolare non solo il totale dell'area di rettangoli ma anche di cerchi.
 
-La prima soluzione che viene in mente è quello di modificare il metodo `processArea` per adattarlo alle nuove esigenze creando più o meno qualcosa del genere:
+La prima soluzione che viene in mente è quello di modificare il metodo `getTotalAreaFromRectangles` per adattarlo alle nuove esigenze creando più o meno qualcosa del genere:
 
 Creiamo la nostra bella classe `Circle`
 
@@ -95,12 +95,12 @@ public class Circle {
 }
 ```
 
-e modifichiamo `processArea`:
+e modifichiamo `getTotalAreaFromRectangles` in `getTotalAreaFromShapes`:
 
 ```java
 public class AreaCalculator {
 
-    public double processArea(Object[] shapes) {
+    public double getTotalAreaFromShapes(Object[] shapes) {
         double totalArea = 0;
         for (Object shape : shapes) {
             if(shape instanceof Rectangle) {
@@ -121,7 +121,7 @@ public class AreaCalculator {
 
 Bene, il tutto funziona e il cliente è felice, no? **WRONG!**
 
-Una settimana dopo il cliente ci comunica che anche il settore dei triangoli potrebbe essere un gran bell'investimento ... e così via. Come si può ben notare questo ci costringe a modificare il metodo `processArea` per estenderlo a nuovi tipi, infrangendo il principio di apertura-chiusura.
+Una settimana dopo il cliente ci comunica che anche il settore dei triangoli potrebbe essere un gran bell'investimento ... e così via. Come si può ben notare questo ci costringe a modificare il metodo `getTotalAreaFromShapes` per estenderlo a nuovi tipi, infrangendo il principio di apertura-chiusura.
 
 ## Okay ma come risolvo?
 
@@ -129,11 +129,11 @@ Una possibile soluzione è quella di usare **l'astrazione**: [creando una interf
 
 ```java
 public interface Shape {
-    double totalArea();
+    double getArea();
 }
 ```
 
-Dopo di ciò ci basterà implementare l'interfaccia `Shape` ed implementare il metodo `totalArea`:
+Dopo di ciò ci basterà implementare l'interfaccia `Shape` ed implementare il metodo `getArea`:
 
 ```java
 public class Rectangle implements Shape {
@@ -158,7 +158,7 @@ public class Rectangle implements Shape {
     }
 
     @Override
-    public double totalArea() {
+    public double getArea() {
         return this.getWidth() * this.getHeight();
     }
 }
@@ -179,21 +179,21 @@ public class Circle implements Shape {
     }
 
     @Override
-    public double totalArea() {
+    public double getArea() {
         return getRadius() * getRadius() * Math.PI;
     }
 }
 ```
 
-Notiamo subito che [spostiamo la responsabilità](https://dlion.it/til-srp/) di calcolare l'area all'interno della classe stessa rendendo il metodo `processArea` semplice, robusto e resiliente al cambiamento di tipo:
+Notiamo subito che [spostiamo la responsabilità](https://dlion.it/til-srp/) di calcolare l'area all'interno della classe stessa rendendo il metodo `getTotalAreaFromShapes` semplice, robusto e resiliente al cambiamento di tipo:
 
 ```java
 public class AreaCalculator {
 
-    public double processArea(Shape[] shapes) {
+    public double getTotalAreaFromShapes(Shape[] shapes) {
         double totalArea = 0;
         for (Shape shape : shapes) {
-           totalArea += shape.totalArea();
+           totalArea += shape.getArea();
         }
         return totalArea;
     }
@@ -209,5 +209,3 @@ Questo è uno dei principi cardine del _S.O.L.I.D._ ma anche uno dei più diffic
 ---
 
 [^1]: [OCP](https://en.wikipedia.org/wiki/Open/closed_principle)
-
-
