Removed dlion.it

--- a/_posts/2018-02-05-til-isp.md
+++ b/_posts/2018-02-05-til-isp.md
@@ -11,11 +11,11 @@ L'articolo in questione è di [Fanis Despoudis](https://codeburst.io/understandi
 
 L'ISP fa parte di una serie di principi che insieme formano il **SOLID**:
 
-* **S** -> [SRP](https://dlion.it/til-srp/) (Single Responsability Principle)
-* **O** -> [OCP](https://dlion.it/til-ocp/) (Open Closed Principle)
-* **L** -> [LSP](https://dlion.it/til-lsp/) (Liskov substitution Principle)
+* **S** -> [SRP](https://dlion.github.io/til-srp/) (Single Responsability Principle)
+* **O** -> [OCP](https://dlion.github.io/til-ocp/) (Open Closed Principle)
+* **L** -> [LSP](https://dlion.github.io/til-lsp/) (Liskov substitution Principle)
 * **I** -> ISP (Interface Segregation Principle)
-* **D** -> [DIP](https://dlion.it/til-dip) (Dependency Inversion Principle)
+* **D** -> [DIP](https://dlion.github.io/til-dip) (Dependency Inversion Principle)
 
 > I *clients* non dovrebbero esser forzati a dipendere da metodi che non usano
 
@@ -69,7 +69,7 @@ type TrimReader interface {
 
 Grosse interfacce portano inesorabilmente ad un accoppiamento involontario fra classi e ciò dovrebbe essere evitato, quando si disegna una interfaccia è sempre meglio chiedersi "*ho bisogno davvero di tutti i metodi contenuti in essa? Se no, come posso rendere l'interfaccia più piccola?*"
 
-Questo principio va a braccetto con il [Principio di Singola Responsabilità](https://dlion.it/til-srp/) la quale ci permette di avere un codice chiaro ma questo principio merita di esser discusso in un articolo a sé.
+Questo principio va a braccetto con il [Principio di Singola Responsabilità](https://dlion.github.io/til-srp/) la quale ci permette di avere un codice chiaro ma questo principio merita di esser discusso in un articolo a sé.
 
 ---
 
