--- a/_posts/2018-02-08-til-srp.md
+++ b/_posts/2018-02-08-til-srp.md
@@ -12,10 +12,10 @@ L'articolo in questione è di [Fenis Despoudis](https://codeburst.io/understandi
 L'SRP fa parte di una serie di principi che insieme formano il **S.O.L.I.D.**:
 
 * **S** -> SRP (Single Responsability Principle)
-* **O** -> [OCP](https://dlion.it/til-ocp/) (Open Closed Principle)
-* **L** -> [LSP](https://dlion.it/til-lsp) (Liskov substitution Principle)
-* **I** -> [ISP](https://dlion.it/til-isp/) (Interface Segregation Principle)
-* **D** -> [DIP](https://dlion.it/til-dip) (Dependency Inversion Principle)
+* **O** -> [OCP](https://dlion.github.io/til-ocp/) (Open Closed Principle)
+* **L** -> [LSP](https://dlion.github.io/til-lsp) (Liskov substitution Principle)
+* **I** -> [ISP](https://dlion.github.io/til-isp/) (Interface Segregation Principle)
+* **D** -> [DIP](https://dlion.github.io/til-dip) (Dependency Inversion Principle)
 
 > Ogni modulo o classe dovrebbe avere la responsabilità su una singola parte della funzionalità fornita dal software e quella funzionalità dovrebbe essere interamente incapsulata nella classe.
 
@@ -71,7 +71,7 @@ In poche parole:
 * Usare nomi semplici, spesso nomi troppo lunghi sono sinonimo di un qualcosa che fa più cose
 * Rifattorizza spesso e presto se noti che qualcosa può essere semplificata
 
-Questo principio infatti va di pari passo con l'[ISP](https://dlion.it/til-isp/) permettendo di scrivere del codice facile da refattorizzare e da cambiare.
+Questo principio infatti va di pari passo con l'[ISP](https://dlion.github.io/til-isp/) permettendo di scrivere del codice facile da refattorizzare e da cambiare.
 
 ---
 
