--- a/_posts/2018-03-03-til-dip.md
+++ b/_posts/2018-03-03-til-dip.md
@@ -10,10 +10,10 @@ Oggi ho letto un [paper](https://drive.google.com/file/d/0BwhCYaYDn8EgMjdlMWIzNG
 
 DIP fa parte di una serie di principi che insieme formano il **S.O.L.I.D.**:
 
-* **S** -> [SRP](https://dlion.it/til-srp/) (Single Responsability Principle)
-* **O** -> [OCP](https://dlion.it/til-ocp/) (Open Closed Principle)
-* **L** -> [LSP](https://dlion.it/til-lsp/) (Liskov substitution Principle)
-* **I** -> [ISP](https://dlion.it/til-isp/) (Interface Segregation Principle)
+* **S** -> [SRP](https://dlion.github.io/til-srp/) (Single Responsability Principle)
+* **O** -> [OCP](https://dlion.github.io/til-ocp/) (Open Closed Principle)
+* **L** -> [LSP](https://dlion.github.io/til-lsp/) (Liskov substitution Principle)
+* **I** -> [ISP](https://dlion.github.io/til-isp/) (Interface Segregation Principle)
 * **D** -> DIP (Dependency Inversion Principle)
 
 La DIP si basa principalmente su due semplici regole:
