--- a/_posts/2018-03-17-til-ocp.md
+++ b/_posts/2018-03-17-til-ocp.md
@@ -10,11 +10,11 @@ Oggi ho letto un [paper](https://drive.google.com/file/d/0BwhCYaYDn8EgN2M5MTkwM2
 
 OCP fa parte di una serie di principi che insieme formano il **S.O.L.I.D.**:
 
-* **S** -> [SRP](https://dlion.it/til-srp/) (Single Responsability Principle)
+* **S** -> [SRP](https://dlion.github.io/til-srp/) (Single Responsability Principle)
 * **O** -> OCP (Open Closed Principle)
-* **L** -> [LSP](https://dlion.it/til-lsp/) (Liskov substitution Principle)
-* **I** -> [ISP](https://dlion.it/til-isp/) (Interface Segregation Principle)
-* **D** -> [DIP](https://dlion.it/til-dip/) (Dependency Inversion Principle)
+* **L** -> [LSP](https://dlion.github.io/til-lsp/) (Liskov substitution Principle)
+* **I** -> [ISP](https://dlion.github.io/til-isp/) (Interface Segregation Principle)
+* **D** -> [DIP](https://dlion.github.io/til-dip/) (Dependency Inversion Principle)
 
 L'OCP ha una sola e semplicissima regola:
 
@@ -125,7 +125,7 @@ Una settimana dopo il cliente ci comunica che anche il settore dei triangoli pot
 
 ## Okay ma come risolvo?
 
-Una possibile soluzione è quella di usare **l'astrazione**: [creando una interfaccia](https://dlion.it/til-isp/) base generica per tutti i tipi su cui dovremmo calcolare l'area:
+Una possibile soluzione è quella di usare **l'astrazione**: [creando una interfaccia](https://dlion.github.io/til-isp/) base generica per tutti i tipi su cui dovremmo calcolare l'area:
 
 ```java
 public interface Shape {
@@ -185,7 +185,7 @@ public class Circle implements Shape {
 }
 ```
 
-Notiamo subito che [spostiamo la responsabilità](https://dlion.it/til-srp/) di calcolare l'area all'interno della classe stessa rendendo il metodo `getTotalAreaFromShapes` semplice, robusto e resiliente al cambiamento di tipo:
+Notiamo subito che [spostiamo la responsabilità](https://dlion.github.io/til-srp/) di calcolare l'area all'interno della classe stessa rendendo il metodo `getTotalAreaFromShapes` semplice, robusto e resiliente al cambiamento di tipo:
 
 ```java
 public class AreaCalculator {
